# DemoNotes

./: .gitignore  README.md  docker-compose-deploy.yml  docker-compose.yml
auth_server/: Dockerfile  alembic-dev.ini  alembic.ini  pyproject.toml
auth_server/auth_server/: main.py
auth_server/auth_server/api/: api.py
auth_server/auth_server/core/: config.py
auth_server/auth_server/db/: database.py  queries.py  redis.py  schema.py
auth_server/auth_server/email_templates/: reset.html  template.py  verify.html
auth_server/auth_server/models/: __init__.py  models.py
auth_server/auth_server/services/: alembic.py  jwt.py  mail_server.py
auth_server/auth_server/utils/: create_url.py
auth_server/tests/: conftest.py  test_app.py
auth_server/tests/api/: conftest.py  test_refresh.py  test_reset_password.py  test_revoke_all.py  test_set_password.py  test_signup.py  test_token.py  test_verify.py
auth_server/tests/utils/: test_create_url.py
note_server/: .gitignore  Dockerfile  alembic-dev.ini  alembic.ini  pyproject.toml
note_server/src/: dependencies.py  main.py
note_server/src/api/: api.py
note_server/src/api/routers/: check.py  (+6 more)
note_server/src/core/: config.py
note_server/src/db/: database.py  models.py
note_server/src/entities/: note.py
note_server/src/schemas/: requests.py
note_server/src/utils/: alembic.py  oauth2_cookies.py
note_server/tests/: conftest.py
note_server/tests/storage/: test_add_tag.py  test_create_and_add_tag.py  test_create_note.py  test_create_tag.py  test_delete_note.py  test_delete_token_for_sharing.py  test_get_note.py  test_get_notes.py  test_get_tags.py  test_import_note.py  test_remove_tag.py  test_set_token_for_sharing.py  test_swap_notes.py  test_update_note.py
(+79 files in other folders)
